c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/subscript_both_pointers.c
int main(void)
{
    int x = 10;
    int *ptr = &x;
    int *subscript = 0;
    // you can't perform subscript operation when both operands are pointers
    return ptr[subscript];
}